{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 42,
  "lineage": "4cc927ef-7d76-3071-f570-6f5e07f82cec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_vpc_default_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:029537663672:route-table/rtb-0e2caa2ae7d70a8e1",
            "default_route_table_id": "rtb-0e2caa2ae7d70a8e1",
            "id": "rtb-0e2caa2ae7d70a8e1",
            "owner_id": "029537663672",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e45938f2849f38a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-default-rt"
            },
            "tags_all": {
              "Name": "my-default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d1aa2d1389fe4b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_web_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:029537663672:security-group/sg-012e6694c93731f40",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012e6694c93731f40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "owner_id": "029537663672",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "tags_all": {
              "Name": "Default Security Group"
            },
            "vpc_id": "vpc-03d1aa2d1389fe4b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2ab3b8efb09f272",
            "arn": "arn:aws:ec2:us-west-2:029537663672:instance/i-08daa96247de99419",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08daa96247de99419",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testing_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01580d11e3a08449a",
            "private_dns": "ip-10-0-100-67.us-west-2.compute.internal",
            "private_ip": "10.0.100.67",
            "public_ip": "54.201.193.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05123c6b200aa0aa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010c97a83f1dd1923",
            "tags": {
              "Name": "My EC2 Intance - Amazon Linux 2"
            },
            "tags_all": {
              "Name": "My EC2 Intance - Amazon Linux 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012e6694c93731f40"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default_sec_group",
            "aws_subnet.web",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:029537663672:internet-gateway/igw-08e45938f2849f38a",
            "id": "igw-08e45938f2849f38a",
            "owner_id": "029537663672",
            "tags": {
              "Name": "Main VPC IGW"
            },
            "tags_all": {
              "Name": "Main VPC IGW"
            },
            "vpc_id": "vpc-03d1aa2d1389fe4b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:029537663672:subnet/subnet-010c97a83f1dd1923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c97a83f1dd1923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029537663672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web subnet"
            },
            "tags_all": {
              "Name": "Web subnet"
            },
            "vpc_id": "vpc-03d1aa2d1389fe4b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:029537663672:vpc/vpc-03d1aa2d1389fe4b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032457aa5c39c1396",
            "default_route_table_id": "rtb-0e2caa2ae7d70a8e1",
            "default_security_group_id": "sg-012e6694c93731f40",
            "dhcp_options_id": "dopt-0cc5eeaaf180d4396",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03d1aa2d1389fe4b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2caa2ae7d70a8e1",
            "owner_id": "029537663672",
            "tags": {
              "Name": "Production Main VPC"
            },
            "tags_all": {
              "Name": "Production Main VPC"
            }
          }
        }
      ]
    }
  ]
}